--- a/src/pages/corte-reservaciones-historial/corte-reservaciones-historial.html
+++ b/src/pages/corte-reservaciones-historial/corte-reservaciones-historial.html
@@ -1,15 +1,24 @@
-<!--
-  Generated template for the CorteReservacionesHistorialPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title>corte-reservaciones-historial</ion-title>
+    <ion-title>Historial</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+
+  <ion-col col-5>
+    <h2>
+      <b>Historial</b>
+      <div class="detalle">Corte reservaciones</div>
+    </h2>
+  </ion-col>
+  <hr>
+
+  <div class="content" scrollable (scrollPosition)="scrollHandler($event)">
+
+    <div class="container">
+    </div>
+  </div>
+
 
 </ion-content>
