--- a/src/pages/corte-venta/corte-venta.html
+++ b/src/pages/corte-venta/corte-venta.html
@@ -57,7 +57,7 @@
                     <img class="icon" src="../assets/imgs/icons/bar-09.png" style="width:50px; height:50px;">
                 </ion-avatar>
                 <h2 class="textosCortes">No. reservaciones finalizadas: <b>{{ cortesLength }} </b> </h2>
-                <h2 class="textosCortesPlus"> <u>Ver más</u>  <ion-icon ios="ios-arrow-dropright-circle" md="md-arrow-dropright-circle"></ion-icon></h2>
+                <h2 (click)="goHistorial()" class="textosCortesPlus"> <u>Ver más</u>  <ion-icon ios="ios-arrow-dropright-circle" md="md-arrow-dropright-circle"></ion-icon></h2>
             </ion-item>
         </ion-list>
         <!-- INFO CORTES -->
