--- a/src/pages/corte-detalle-reservacion/corte-detalle-reservacion.html
+++ b/src/pages/corte-detalle-reservacion/corte-detalle-reservacion.html
@@ -14,37 +14,62 @@
   </ion-col>
   <hr>
 
-    <ion-card *ngFor="let corte of corte">
+  <ion-list>
+    <ion-item>
+      <ion-avatar item-start>
+        <img class="icon" src="../assets/imgs/icons/home-03.png" style="width:50px; height:50px;">
+      </ion-avatar>
+      <h3 class="textosCortes">Fecha de inicio del corte: {{ corte?.fecha_Inicio | date }} </h3>
+      <h3 class="textosCortes">Fecha de final del corte: {{ corte?.fecha_Fin | date }} </h3>
+    </ion-item>
+    <ion-item>
+      <ion-avatar item-start>
+        <img class="icon" src="../assets/imgs/icons/bar-09.png" style="width:50px; height:50px;">
+      </ion-avatar>
+      <h2 class="textosCortes">No. reservaciones hechas: <b>{{ corte?.totalReservaciones }} </b> </h2>
+      <h2 (click)="goHistorial()" class="textosCortesPlus"> <u>Ver más</u>
+        <ion-icon ios="ios-arrow-dropright-circle" md="md-arrow-dropright-circle"></ion-icon>
+      </h2>
+    </ion-item>
+  </ion-list>
+
+  <ion-card>
     <ion-card-content class="">
+
+      <ion-fab right top>
+        <button ion-fab color="primary" (click)="cerrar_modal()">
+          <ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon>
+        </button>
+      </ion-fab>
 
       <ion-item class="card_atras">
         <a class="blanco_2"> Subtotal</a>
         <h4 class="blanco_1"></h4>
-        <ion-badge class="negro" item-end> {{ corte.subTotal | currency}}</ion-badge>
+        <ion-badge class="negro" item-end> {{ corte?.subTotal | currency}}</ion-badge>
       </ion-item>
 
       <ion-item class="card_atras">
         <a class="blanco_2"> Comisiones</a>
         <h4 class="blanco_1"></h4>
-        <ion-badge class="negro" item-end> {{ corte.comision | currency }}</ion-badge>
+        <ion-badge class="negro" item-end> {{ corte?.comision | currency }}</ion-badge>
       </ion-item>
 
       <ion-item class="card_atras">
         <a class="blanco_2">IVA</a>
         <h4 class="blanco_1"></h4>
-        <ion-badge class="negro" item-end> {{ corte.iva | currency }} </ion-badge>
+        <ion-badge class="negro" item-end> {{ corte?.iva | currency }} </ion-badge>
       </ion-item>
 
       <ion-item class="card_atras">
         <a class="blanco_2">Propinas</a>
         <h4 class="blanco_1"></h4>
-        <ion-badge class="negro" item-end> {{ corte.propina | currency }} </ion-badge>
+        <ion-badge class="negro" item-end> {{ corte?.propina | currency }} </ion-badge>
       </ion-item>
 
       <ion-item class="card_atras">
         <a class="blanco_2">Total neto</a>
         <h4 class="blanco_1"></h4>
-        <ion-badge class="negro" item-end> {{ corte.totalNeto | currency }} </ion-badge>
+        <ion-badge class="negro" item-end> {{ corte?.totalNeto | currency }} </ion-badge>
       </ion-item>
 
       <br>
