--- a/src/pages/corte-detalle-reservacion/corte-detalle-reservacion.html
+++ b/src/pages/corte-detalle-reservacion/corte-detalle-reservacion.html
@@ -8,7 +8,7 @@
 
   <ion-col col-5>
     <h2>
-      <b>Master</b>
+      <b>Sucursal</b>
       <div class="detalle">Detalle Corte</div>
     </h2>
   </ion-col>
