--- a/src/pages/corte-reservaciones-historial/corte-reservaciones-historial.html
+++ b/src/pages/corte-reservaciones-historial/corte-reservaciones-historial.html
@@ -5,6 +5,11 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-fab right top>
+    <button ion-fab color="primary" (click)="cerrar_modal()">
+      <ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon>
+    </button>
+  </ion-fab>
 
   <ion-col col-5>
     <h2>
