--- a/src/pages/admin-sucursal-perfil/admin-sucursal-perfil.html
+++ b/src/pages/admin-sucursal-perfil/admin-sucursal-perfil.html
@@ -36,7 +36,7 @@
                 <ion-segment-button (click)="goEditPerfil(sucursal)">
                     Editar perfil
                 </ion-segment-button>
-                <ion-segment-button (click)="goCorteVentas(sucursal)">
+                <ion-segment-button *ngIf="tipo != 'a'" (click)="goCorteVentas(sucursal)">
                     Corte
                 </ion-segment-button>
                 <ion-segment-button (click)="goCorteHistorial(sucursal)">
