--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -208,12 +208,12 @@
                 </ion-badge>
             </ion-item>
 
-            <!-- <ion-item (click)="goTools(this.sucursal)">
+            <ion-item (click)="goTools(this.sucursal)">
                 <img item-start class="imgRes4" src="./assets/content/icono3.png"> Herramientas
                 <ion-badge class="buttonColor" item-end>
                     <ion-icon ios="ios-arrow-forward" md="md-arrow-forward" style="color:white"></ion-icon>
                 </ion-badge>
-            </ion-item> -->
+            </ion-item>
 
         </div>
 
