--- a/src/pages/admin-monitear-reserv/admin-monitear-reserv.html
+++ b/src/pages/admin-monitear-reserv/admin-monitear-reserv.html
@@ -1,131 +1,179 @@
 <ion-header>
+  <ion-navbar class="borde" hideBackButton>
+    <ion-row>
+      <ion-col col-1>
+        <!-- <ion-icon name="ios-arrow-back-outline" (click)="behind()" style="color:white"></ion-icon> -->
+      </ion-col>
 
-    <ion-navbar class="borde" hideBackButton>
-        <ion-row>
-            <ion-col col-1>
-                <!-- <ion-icon name="ios-arrow-back-outline" (click)="behind()" style="color:white"></ion-icon> -->
-            </ion-col>
-
-            <ion-col col-1 align="center">
-                <img src="./assets/content/line2.png" class="imgLi" alt="">
-            </ion-col>
-            <ion-col col-8>
-                <div class="AdminEvento">Reservaciones próximas</div>
-                <div class="sucursal">Sucursal</div>
-            </ion-col>
-            <ion-col>
-                <div align='end'>
-                    <img src="./assets/content/corona.png" style="width: 40%;" alt="">
-                </div>
-            </ion-col>
-        </ion-row>
-    </ion-navbar>
-
+      <ion-col col-1 align="center">
+        <img src="./assets/content/line2.png" class="imgLi" alt="" />
+      </ion-col>
+      <ion-col col-8>
+        <div class="AdminEvento">Reservaciones próximas</div>
+        <div class="sucursal">Sucursal</div>
+      </ion-col>
+      <ion-col>
+        <div align="end">
+          <img src="./assets/content/corona.png" style="width: 40%" alt="" />
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-navbar>
 </ion-header>
 
 <ion-content>
+  <ion-fab right top>
+    <button ion-fab color="primary" (click)="behind()">
+      <ion-icon
+        ios="ios-arrow-back"
+        md="md-arrow-back"
+        style="color: #000000"
+      ></ion-icon>
+    </button>
+  </ion-fab>
 
-    <ion-fab right top>
-        <button ion-fab color="primary" (click)="behind()">
-            <ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon>
-        </button>
-    </ion-fab>
+  <ion-row>
+    <ion-col col-1></ion-col>
+    <ion-col>
+      <p class="lugar">
+        Monitoreo de reservaciones
+        <br />
+        <img src="./assets/content/line-hori.png" style="width: 40%" alt="" />
+      </p>
+      <p class="descrip">Sucursal</p>
+    </ion-col>
+    <ion-col col-1></ion-col>
+  </ion-row>
 
-    <ion-row>
-        <ion-col col-1></ion-col>
-        <ion-col>
-            <p class="lugar">
-                Monitoreo de reservaciones
-                <br>
-                <img src="./assets/content/line-hori.png" style="width: 40%;" alt="">
-            </p>
-            <p class="descrip">
-                Sucursal
-            </p>
-        </ion-col>
-        <ion-col col-1></ion-col>
-    </ion-row>
+  <div class="content" scrollable (scrollPosition)="scrollHandler($event)">
+    <div class="container">
+      <ion-item *ngFor="let reservaciona of page.data | async">
+        <ion-list>
+          <ion-item-sliding #item>
+            <ion-item>
+              <h2 style="text-transform: uppercase">
+                <ion-icon
+                  ios="ios-contact"
+                  md="md-contact"
+                  item-start
+                  style="color: #fcc04d"
+                ></ion-icon>
+                Nombre:
+                <b
+                  >{{ (reservaciona.idUsuario | getNameUser |
+                  async)?.displayName }}</b
+                >
+              </h2>
 
+              <h3>
+                <ion-icon
+                  ios="ios-calendar"
+                  md="md-calendar"
+                  item-start
+                  style="color: #fcc04d"
+                ></ion-icon>
+                Fecha:
+                <b> {{ reservaciona.fechaR | date: 'dd/MM/yyyy' }} </b>
+              </h3>
 
-    <div class="content" scrollable (scrollPosition)="scrollHandler($event)">
+              <p class="hora">
+                <ion-icon
+                  ios="ios-time"
+                  md="md-time"
+                  item-start
+                  style="color: #fcc04d"
+                ></ion-icon
+                >Hora de reservación: <b> {{ reservaciona.hora }} </b>
+              </p>
+              <p *ngIf="reservaciona.estatus" class="hora" item-end>
+                <img
+                  src="./assets/content/Ellipse55.png"
+                  class="imgElli"
+                  alt=""
+                />
+                Aceptado
+              </p>
 
-        <div class="container">
-
-
-            <ion-item *ngFor="let reservaciona of page.data | async">
-
-                <h2 style="text-transform: uppercase">
-                    <ion-icon ios="ios-contact" md="md-contact" item-start style="color: #fcc04d"></ion-icon> Nombre:
-                    <b>{{ (reservaciona.idUsuario | getNameUser | async)?.displayName }}</b>
-                </h2>
-
-                <h3>
-                    <ion-icon ios="ios-calendar" md="md-calendar" item-start style="color: #fcc04d"></ion-icon> Fecha:
-                    <b> {{ reservaciona.fechaR | date: 'dd/MM/yyyy' }} </b>
-                </h3>
-
-                <p class="hora">
-                    <ion-icon ios="ios-time" md="md-time" item-start style="color: #fcc04d"></ion-icon>Hora de
-                    reservación: <b> {{ reservaciona.hora }} </b>
-                </p>
-                <p *ngIf="reservaciona.estatus" class="hora" item-end>
-                    <img src="./assets/content/Ellipse55.png" class="imgElli" alt=""> Aceptado
-                </p>
-
-                <ng-container *ngIf="reservaciona.idevento != null">
-
-                    <ng-container *ngFor="let event of infoEvento">
-
-                        <ng-container *ngIf="reservaciona.idevento == event.uid">
-
-                            <p class="hora">
-                                <ion-icon ios="ios-beer" md="md-beer" item-start style="color: #fcc04d"></ion-icon> {{
-                                event.titulo }}
-                            </p>
-
-                        </ng-container>
-
-                    </ng-container>
-
+              <ng-container *ngIf="reservaciona.idevento != null">
+                <ng-container *ngFor="let event of infoEvento">
+                  <ng-container *ngIf="reservaciona.idevento == event.uid">
+                    <p class="hora">
+                      <ion-icon
+                        ios="ios-beer"
+                        md="md-beer"
+                        item-start
+                        style="color: #fcc04d"
+                      ></ion-icon>
+                      {{ event.titulo }}
+                    </p>
+                  </ng-container>
                 </ng-container>
+              </ng-container>
 
-                <button ion-button block round class="btnDetalle" (click)="goDetalle(reservaciona.idReservacion)">
-
-                    Detalle
-
-                </button>
-
+              <button
+                ion-button
+                block
+                round
+                class="btnDetalle"
+                (click)="goDetalle(reservaciona.idReservacion)"
+              >
+                Detalle
+              </button>
+              <br>
+              <sub
+                *ngIf="(reservaciona.fechaR <= fechaActual && reservaciona.estatus_pago != 'Pagado') || ((reservaciona.idReservacion| getCompartidas | async)?.estatus_pago != 'Pagado' && reservaciona.estatus == 'AceptadoCompartida' && reservaciona.fechaR <= fechaActual)"
+                ion-text
+                color="danger"
+              >
+              <b>
+                  <ion-icon
+                    ios="ios-warning"
+                    md="md-warning"
+                    item-start
+                    style="color: #f53d3d"
+                  ></ion-icon>
+              </b>
+                La reservacion no ha sido pagada
+              </sub>
             </ion-item>
 
-        </div>
-
+            <ion-item-options
+              *ngIf="(reservaciona.fechaR <= fechaActual && reservaciona.estatus_pago != 'Pagado') || ((reservaciona.idReservacion| getCompartidas | async)?.estatus_pago != 'Pagado' && reservaciona.estatus == 'AceptadoCompartida' && reservaciona.fechaR <= fechaActual) "
+              side="right"
+            >
+              <button
+                ion-button
+                color="danger"
+                (click)="cancelReserva(reservaciona.idReservacion, reservaciona.idUsuario)"
+              >
+                Cancelar
+              </button>
+            </ion-item-options>
+          </ion-item-sliding>
+        </ion-list>
+      </ion-item>
     </div>
+  </div>
 
-    <div padding *ngIf="noReservaciones == 0">
-        <div align="center">
-            <img text-center class="adv2" src="./assets/content/advertencia.png" />
-        </div>
-        <p class="aviso">
-            Aviso
-        </p>
-        <p class="aviso">
-            Por el momento no hay reservaciones Acepatadas.
-        </p>
+  <div padding *ngIf="noReservaciones == 0">
+    <div align="center">
+      <img text-center class="adv2" src="./assets/content/advertencia.png" />
     </div>
+    <p class="aviso">Aviso</p>
+    <p class="aviso">Por el momento no hay reservaciones Acepatadas.</p>
+  </div>
 
-    <p *ngIf="page.done | async"></p>
+  <p *ngIf="page.done | async"></p>
 
-    <ion-footer>
-        <loading-spinner *ngIf="page.loading | async"></loading-spinner>
-    </ion-footer>
+  <ion-footer>
+    <loading-spinner *ngIf="page.loading | async"></loading-spinner>
+  </ion-footer>
 
+  <!-- TERMINA ION LIST DE LAS RESERVACIONES COMPARTIDAS-->
 
-    <!-- TERMINA ION LIST DE LAS RESERVACIONES COMPARTIDAS-->
-
-
-    <ion-fab right bottom>
-        <button *ngIf="menu != 'menu'" ion-fab color="dark" (click)="scan()">
-            <ion-icon ios="ios-barcode" md="md-barcode"></ion-icon>
-        </button>
-    </ion-fab>
+  <ion-fab right bottom>
+    <button *ngIf="menu != 'menu'" ion-fab color="dark" (click)="scan()">
+      <ion-icon ios="ios-barcode" md="md-barcode"></ion-icon>
+    </button>
+  </ion-fab>
 </ion-content>
