--- a/src/pages/reserva-detalle/reserva-detalle.html
+++ b/src/pages/reserva-detalle/reserva-detalle.html
@@ -51,7 +51,7 @@
         <ion-item>
             <ion-icon ios="ios-beer" md="md-beer" item-start style="color: #fcc04d"></ion-icon>
             Evento
-            <ion-badge item-end>({{ (reserv.idevento | getNameEvento | async)?.titulo }})</ion-badge>
+            <ion-badge item-end>{{ (reserv.idevento | getNameEvento | async)?.titulo }}</ion-badge>
         </ion-item>
 
         <ion-item>
