--- a/src/pages/admin-monitear-reserv/admin-monitear-reserv.html
+++ b/src/pages/admin-monitear-reserv/admin-monitear-reserv.html
@@ -160,7 +160,7 @@
       <img text-center class="adv2" src="./assets/content/advertencia.png" />
     </div>
     <p class="aviso">Aviso</p>
-    <p class="aviso">Por el momento no hay reservaciones Acepatadas.</p>
+    <p class="aviso">Por el momento no hay reservaciones Aceptadas.</p>
   </div>
 
   <p *ngIf="page.done | async"></p>
