--- a/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
+++ b/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
@@ -26,13 +26,19 @@
 </ion-header>
 <ion-content>
 
-  <ion-fab right top *ngIf="usuarioMaster == null">
+  <ion-fab right top *ngIf="usuarioMaster == null && reembolso == null">
     <button ion-fab color="primary" (click)="behind()">
       <ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon>
     </button>
   </ion-fab>
 
   <ion-fab right top *ngIf="usuarioMaster != null">
+    <button ion-fab color="primary" (click)="cerrar_modal()">
+      <ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon>
+    </button>
+  </ion-fab>
+
+  <ion-fab right top *ngIf="reembolso != null">
     <button ion-fab color="primary" (click)="cerrar_modal()">
       <ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon>
     </button>
@@ -448,5 +454,7 @@
     <hr>
 
   </div>
+
+  <button *ngIf="reembolso != null" ion-button block>Reembolsar</button>
 
 </ion-content>
