--- a/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
+++ b/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
@@ -309,7 +309,6 @@
           <ion-col>Propina</ion-col>
           <ion-col>{{ propinaRe2 | currency }}</ion-col>
         </ion-row>
-
         <!-- TOTAL -->
         <ion-row>
           <ion-col></ion-col>
@@ -317,6 +316,17 @@
           <ion-col><b>Total</b></ion-col>
           <ion-col>
             <b>{{totalNeto | currency}}
+            </b>
+          </ion-col>
+        </ion-row>
+
+        <!-- TOTAL REEMBOLSO -->
+        <ion-row *ngIf="reembolso == 'Reem'">
+          <ion-col></ion-col>
+          <ion-col><b></b></ion-col>
+          <ion-col><b>Total a reembolsar</b></ion-col>
+          <ion-col>
+            <b>{{totalReembolso | currency}}
             </b>
           </ion-col>
         </ion-row>
@@ -376,6 +386,17 @@
           <ion-col><b>Total</b></ion-col>
           <ion-col>
             <b>{{ totalNeto | currency}}</b>
+          </ion-col>
+        </ion-row>
+
+        <!-- TOTAL REEMBOLSO -->
+        <ion-row *ngIf="reembolso == 'Reem'">
+          <ion-col></ion-col>
+          <ion-col><b></b></ion-col>
+          <ion-col><b>Total a reembolsar</b></ion-col>
+          <ion-col>
+            <b>{{totalReembolso | currency}}
+            </b>
           </ion-col>
         </ion-row>
 
@@ -445,6 +466,8 @@
             <ion-icon ios="ios-checkmark-circle" md="md-checkmark-circle" item-start style="color: #CDDC39"></ion-icon>
           </p>
 
+          <p *ngIf="reembolso == 'Reem'">Reembolsar {{ totalReembolso / infoReserCom_num | currency }}</p>
+
         </ion-note>
 
       </ion-col>
@@ -455,6 +478,8 @@
 
   </div>
 
-  <button *ngIf="reembolso == 'Reem'" ion-button block (click)="functionReembolsar(reservaciones.playerIDs, reservaciones.idReservacion)">Reembolsar</button>
+  <button *ngIf="reembolso == 'Reem'" ion-button block
+    (click)="functionReembolsar(reservaciones.playerIDs, reservaciones.idReservacion)">Reembolsar {{ totalReembolso | currency
+    }}</button>
 
 </ion-content>
